# Reflow

./: .gitignore  README.md
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/docs/api/: endpoint-plan.md
backend/docs/architecture/: domain-model.md  overview.md
backend/docs/architecture/decision-records/: 0001-modular-monolith.md  0002-event-sourcing-outbox.md  0003-custom-policy-engine.md  0004-tiered-intelligence.md  0005-three-layer-idempotency.md  README.md
backend/migrations/sql/: 001_initial_schema.sql
backend/src/reflow/: __init__.py  asgi.py  main.py
backend/src/reflow/agents/base/: agent.py  prompt.py
backend/src/reflow/agents/diagnosis/: agent.py  schemas.py
backend/src/reflow/agents/diagnosis/prompts/: system.py
backend/src/reflow/agents/guard/: agent.py  schemas.py
backend/src/reflow/agents/guard/prompts/: system.py
backend/src/reflow/agents/llm/: client.py  router.py
backend/src/reflow/agents/orchestrator/: coordinator.py
backend/src/reflow/agents/risk/: agent.py  schemas.py
backend/src/reflow/agents/risk/prompts/: system.py
backend/src/reflow/agents/safety/: input_sanitizer.py  output_validator.py
backend/src/reflow/agents/strategy/: agent.py  schemas.py
backend/src/reflow/agents/strategy/prompts/: system.py
backend/src/reflow/api/: deps.py  router.py
backend/src/reflow/api/v1/: router.py
backend/src/reflow/api/v1/approvals/: routes.py  schemas.py
backend/src/reflow/api/v1/audit/: routes.py  schemas.py
backend/src/reflow/api/v1/auth/: routes.py  schemas.py
backend/src/reflow/api/v1/dashboard/: routes.py  schemas.py
backend/src/reflow/api/v1/diagnosis/: routes.py  schemas.py
backend/src/reflow/api/v1/flags/: routes.py  schemas.py
backend/src/reflow/api/v1/observability/: routes.py  schemas.py
backend/src/reflow/api/v1/policies/: routes.py  schemas.py
backend/src/reflow/api/v1/recoveries/: routes.py  schemas.py
backend/src/reflow/api/v1/simulation/: routes.py  schemas.py
backend/src/reflow/api/v1/system/: routes.py  schemas.py
backend/src/reflow/api/v1/transactions/: routes.py  schemas.py
backend/src/reflow/api/webhooks/: mock_gateway.py
backend/src/reflow/api/ws/: __init__.py  approvals.py  base.py  health.py  recoveries.py  transactions.py
backend/src/reflow/application/: __init__.py
backend/src/reflow/application/recovery/: __init__.py  dto.py
backend/src/reflow/application/recovery/commands/: propose_recovery.py
backend/src/reflow/application/transactions/: __init__.py  dto.py
backend/src/reflow/application/transactions/commands/: ingest_event.py
backend/src/reflow/core/: __init__.py
backend/src/reflow/core/config/: __init__.py  base.py  database.py  llm.py  observability.py  redis.py  security.py
backend/src/reflow/core/database/: __init__.py  base.py  session.py
backend/src/reflow/core/events/: __init__.py  event.py  outbox.py  registry.py
backend/src/reflow/core/exceptions/: __init__.py  base.py  domain.py  infrastructure.py
backend/src/reflow/core/middleware/: __init__.py  error_handler.py  idempotency.py  request_id.py
backend/src/reflow/core/observability/: __init__.py  logging.py
backend/src/reflow/core/redis/: __init__.py  client.py
backend/src/reflow/core/security/: __init__.py  jwt.py  passwords.py  signing.py
backend/src/reflow/core/types/: __init__.py  identifiers.py  money.py  result.py
backend/src/reflow/domain/: __init__.py
backend/src/reflow/domain/audit/: __init__.py  value_objects.py
backend/src/reflow/domain/policy/: __init__.py  value_objects.py
backend/src/reflow/domain/recovery/: __init__.py  entities.py  events.py  value_objects.py
backend/src/reflow/domain/transactions/: __init__.py  entities.py  events.py  repositories.py  value_objects.py
backend/src/reflow/infrastructure/: __init__.py
backend/src/reflow/infrastructure/audit_log/: __init__.py  chain.py  merkle.py  verifier.py
backend/src/reflow/infrastructure/gateways/mock/: client.py
backend/src/reflow/infrastructure/persistence/: __init__.py
backend/src/reflow/infrastructure/policy_engine/: __init__.py  client.py  evaluator.py
backend/src/reflow/infrastructure/simulation/: distributions.py  mock_agents.py  runner.py
backend/src/reflow/workers/: main.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py
backend/tests/integration/api/: transactions_flow_test.py
backend/tests/integration/persistence/: event_store_test.py
backend/tests/unit/agents/diagnosis/: diagnosis_agent_test.py
backend/tests/unit/agents/guard/: guard_agent_test.py
backend/tests/unit/agents/orchestrator/: coordinator_test.py
backend/tests/unit/agents/risk/: risk_agent_test.py
backend/tests/unit/agents/safety/: input_sanitizer_test.py
backend/tests/unit/agents/strategy/: strategy_agent_test.py
backend/tests/unit/core/events/: outbox_test.py
backend/tests/unit/core/security/: auth_test.py  signing_test.py
backend/tests/unit/core/types/: money_test.py  result_test.py
backend/tests/unit/domain/recovery/: recovery_aggregate_test.py
backend/tests/unit/domain/transactions/: transaction_aggregate_test.py
backend/tests/unit/infrastructure/audit_log/: merkle_test.py
backend/tests/unit/infrastructure/policy_engine/: engine_test.py
backend/tests/unit/infrastructure/simulation/: generators_test.py  mock_agents_test.py
(+96 files in other folders)
