[project]
name = "reflow-backend"
version = "0.1.0"
description = "Reflow — Trustworthy Autonomous Payment Recovery Platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Reflow" }]

dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-socketio>=5.11.4",

    # Validation & settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",

    # Redis / queue
    "redis>=5.2.0",
    "arq>=0.26.3",

    # AI / LLM
    "litellm>=1.52.0",
    "pydantic-ai>=0.0.13",
    "fastembed>=0.4.2",
    "tiktoken>=0.8.0",

    # Auth & security
    "fastapi-users[sqlalchemy]>=14.0.0",
    "passlib[argon2]>=1.7.4",
    "pyjwt>=2.10.0",
    "cryptography>=43.0.0",
    "pynacl>=1.5.0",

    # Observability
    "structlog>=24.4.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
    "opentelemetry-instrumentation-redis>=0.49b0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "langfuse>=2.53.0",
    "sentry-sdk[fastapi]>=2.18.0",

    # Notifications
    "httpx>=0.28.0",
    "resend>=2.4.0",

    # Utilities
    "orjson>=3.10.10",
    "tenacity>=9.0.0",
    "python-ulid>=3.0.0",
    "click>=8.1.7",
    "rich>=13.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "hypothesis>=6.119.0",
    "factory-boy>=3.3.1",
    "polyfactory>=2.18.0",
    "testcontainers[postgres,redis]>=4.8.2",
    "respx>=0.21.1",
    "schemathesis>=3.39.0",
    "locust>=2.32.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-redis>=4.6.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reflow"]

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["*_test.py", "test_*.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "unit: pure unit tests, no I/O",
    "integration: integration tests with real Postgres/Redis (testcontainers)",
    "e2e: full end-to-end scenarios",
    "red_team: adversarial tests",
    "slow: tests that take >1s",
]

# -----------------------------------------------------------------------------
# Coverage
# -----------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/reflow"]
branch = true
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
    "@abstractmethod",
]

# -----------------------------------------------------------------------------
# Ruff
# -----------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",     # pycodestyle
    "F",          # pyflakes
    "I",          # isort
    "B",          # bugbear
    "C4",         # comprehensions
    "UP",         # pyupgrade
    "SIM",        # simplify
    "RET",        # returns
    "PT",         # pytest style
    "TID",        # tidy imports
    "ARG",        # unused args
    "PERF",       # performance
    "RUF",        # ruff-specific
    "ASYNC",      # async best practices
    "S",          # security (bandit)
    "N",          # naming
    "PL",         # pylint
    "TRY",        # try/except patterns
]
ignore = [
    "S101",       # asserts ok in tests
    "PLR0913",    # too-many-arguments — Pydantic models legit have many
    "PLR2004",    # magic-value-comparison — too noisy in tests
    "TRY003",     # long exception messages — they're for humans
    "TRY300",     # else-after-return — sometimes clearer without
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PLR", "ARG"]
"src/reflow/infrastructure/persistence/models/*.py" = ["A003"]  # 'id' attribute

[tool.ruff.lint.isort]
known-first-party = ["reflow"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -----------------------------------------------------------------------------
# Mypy
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = ["fastembed.*", "litellm.*", "arq.*", "pgvector.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
